--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <!-- Header -->
 <app-header></app-header>
 
@@ -8,30 +9,19 @@
 <app-mid-content-one></app-mid-content-one>
 
 <!-- Demo Account -->
-<div
-  class="text-center w-full mb-10 bg-indigo-500 text-white"
-  style="padding: 40px"
->
-  <h1 class="sm:text-4xl text-3xl font-medium title-font mb-2">
-    Demo Accounts
-  </h1>
-  <p class="lg:w-2/3 mx-auto leading-relaxed text-bas">
-    You can see some demo account links with credentials and other details to go
-    with it click one of them.
-  </p>
-</div>
+
 <app-demo-accounts></app-demo-accounts>
 
-<section class="text-gray-600 body-font">
+<section class="text-orange-500 body-font sm:bg-gradient-to-r bg-gradient-to-t from-yellow-400 ">
   <div class="container px-5 py-24 mx-auto flex flex-wrap">
     <div class="mb-2 md:w-2/5">
-      <h1 class="sm:text-3xl text-2xl font-medium title-font ">Gajanand Book </h1>
-      <p class="font-thin mb-4">The Name of Trust</p>
-      <div class="bg-indigo-500 w-full h-4 rounded-full"></div>
+      <div class="sm:text-5xl text-2xl font-medium title-font ">Gajanand Book </div>
+      <p class="sm:text-2xl text-1xl font-thin mb-4">The Name of Trust</p>
+      <div class="bg-yellow-400 w-full h-4 rounded-full"></div>
     </div>
-    <div class="md:w-3/5 md:pl-6">
+    <div class="md:w-3/5 md:pl-6 text-gray-600">
       <p class="leading-relaxed text-base">Trust is the glue of life. It's the most essential ingredient in effective communication. It's the foundational principle that holds all relationships.</p>
-      <div class="flex md:mt-4 mt-6 text-right text-indigo-500">
+      <div class="flex md:mt-4 mt-6 text-right ">
           - Stephen Covey
       </div>
     </div>
