--- a/src/app/statics/statics.component.html
+++ b/src/app/statics/statics.component.html
@@ -2,20 +2,20 @@
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4 text-center">
       <div class="p-4 sm:w-1/4 w-1/2">
-        <h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">2.7K</h2>
-        <p class="leading-relaxed">Users</p>
+        <div class="title-font font-medium sm:text-4xl text-3xl text-gray-900">2.7K</div>
+        <p class="leading-relaxed">Online Users</p>
       </div>
       <div class="p-4 sm:w-1/4 w-1/2">
-        <h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">1.8K</h2>
-        <p class="leading-relaxed">Subscribes</p>
+        <div class="title-font font-medium sm:text-4xl text-3xl text-gray-900">1.8K</div>
+        <p class="leading-relaxed">Winners</p>
       </div>
       <div class="p-4 sm:w-1/4 w-1/2">
-        <h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">35</h2>
-        <p class="leading-relaxed">Downloads</p>
+        <div class="title-font font-medium sm:text-4xl text-3xl text-gray-900">35K</div>
+        <p class="leading-relaxed">Visitors</p>
       </div>
       <div class="p-4 sm:w-1/4 w-1/2">
-        <h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">4</h2>
-        <p class="leading-relaxed">Products</p>
+        <div class="title-font font-medium sm:text-4xl text-3xl text-gray-900">4</div>
+        <p class="leading-relaxed">Request Queue</p>
       </div>
     </div>
   </div>
