--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,23 +1,68 @@
-.landing-title {
-    font-size: 4.50rem;
-    font-weight: 500;
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  .carosal-css {
+    // zoom: 0.5;
+    height: 320px !important;
+    height: 320px !important;
+  }
 }
 
-@media only screen and (min-width:320px) and (max-width: 480px) {
-    .carosal-css {
-        // zoom: 0.5;
-        height: 320px !important;
-        height: 320px !important;
-    }
-}
-
-@media only screen and (min-width: 768px)   and (orientation: landscape) {
-    .carosal-css {
-        // zoom: 0.5;
-        height: 512px !important;
-    }
+@media only screen and (min-width: 768px) and (orientation: landscape) {
+  .carosal-css {
+    // zoom: 0.5;
+    height: 512px !important;
+  }
 }
 
 @media only screen and (min-width: 768px) and (orientation: portrait) {
+}
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes shake-animation {
+    0% {
+      transform: translate(0, 0);
+    }
+    1.78571% {
+      transform: translate(25px, 0);
+    }
+    3.57143% {
+      transform: translate(0, 0);
+    }
+    5.35714% {
+      transform: translate(25px, 0);
+    }
+    7.14286% {
+      transform: translate(0, 0);
+    }
+    8.92857% {
+      transform: translate(25px, 0);
+    }
+    10.71429% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(0, 0);
+    }
+  }
+.landing-titile {
+  /* This section calls the slideInFromLeft animation we defined above */
+  animation: 1s ease-in 0s 1 slideInFromLeft;
+  font-family: "Monoton", cursive;
+}
+
+.telegram-text {
+  font-family: "Fredoka One", cursive;
+  animation: shake-animation 2s ease infinite;
+  transform-origin: 50% 50%;
+}
+
+.telegram-anchor {
+    margin: 0 auto;
 
 }
