Added stats widgetand changed footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 
 <!-- Landing page -->
 <app-landing></app-landing>
+<!-- <script src="" defer></script> -->
 
 <!-- Contents -->
 <app-mid-content-one></app-mid-content-one>
@@ -12,21 +13,7 @@
 
 <app-demo-accounts></app-demo-accounts>
 
-<section class="text-orange-500 body-font sm:bg-gradient-to-r bg-gradient-to-t from-yellow-400 ">
-  <div class="container px-5 py-24 mx-auto flex flex-wrap">
-    <div class="mb-2 md:w-2/5">
-      <div class="sm:text-5xl text-2xl font-medium title-font ">Gajanand Book </div>
-      <p class="sm:text-2xl text-1xl font-thin mb-4">The Name of Trust</p>
-      <div class="bg-yellow-400 w-full h-4 rounded-full"></div>
-    </div>
-    <div class="md:w-3/5 md:pl-6 text-gray-600">
-      <p class="leading-relaxed text-base">Trust is the glue of life. It's the most essential ingredient in effective communication. It's the foundational principle that holds all relationships.</p>
-      <div class="flex md:mt-4 mt-6 text-right ">
-          - Stephen Covey
-      </div>
-    </div>
-  </div>
-</section>
+<app-mark-words></app-mark-words>
 <app-statics></app-statics>
 <!-- Footer -->
 <app-footer></app-footer>
