--- a/src/app/statics/statics.component.html
+++ b/src/app/statics/statics.component.html
@@ -1,22 +1,20 @@
 <section class="text-gray-600 body-font">
-  <div class="container px-5 py-24 mx-auto">
-    <div class="flex flex-wrap -m-4 text-center">
-      <div class="p-4 sm:w-1/4 w-1/2">
-        <div class="title-font font-medium sm:text-4xl text-3xl text-gray-900">2.7K</div>
-        <p class="leading-relaxed">Online Users</p>
+<!--   <div class="container px-5 py-12 mx-auto">
+    <div class="elfsight-app-bb12f81b-36da-4c63-b1bf-60419457c001"></div>
+  </div> -->
+
+  <div fxLayout="row wrap" fxLayoutAlign="center center" class="px-5 py-12 mx-auto">
+    <div fxFlex="50%" fxFlex.xs="100%">
+      <div class=" text-7xl sm:text-7xl text-center">
+        You Raise<br/>
+        We Raise<br>
+        <div style="display: inline-block; margin-bottom: 10px;" class="bg-yellow-400 w-1/2 h-3 rounded-full"></div> 
       </div>
-      <div class="p-4 sm:w-1/4 w-1/2">
-        <div class="title-font font-medium sm:text-4xl text-3xl text-gray-900">1.8K</div>
-        <p class="leading-relaxed">Winners</p>
-      </div>
-      <div class="p-4 sm:w-1/4 w-1/2">
-        <div class="title-font font-medium sm:text-4xl text-3xl text-gray-900">35K</div>
-        <p class="leading-relaxed">Visitors</p>
-      </div>
-      <div class="p-4 sm:w-1/4 w-1/2">
-        <div class="title-font font-medium sm:text-4xl text-3xl text-gray-900">4</div>
-        <p class="leading-relaxed">Request Queue</p>
-      </div>
+<!--       <p class="sm:text-2xl text-1xl font-thin mb-4">The Name of Trust</p>-->
+    </div>
+    <div fxFlex="50%" fxFlex.xs="100%" class="text-gray-600">
+      <div class="elfsight-app-bb12f81b-36da-4c63-b1bf-60419457c001"></div>
     </div>
   </div>
 </section>
+
