--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,14 @@ body {
   font-family: "Nunito", sans-serif;
   height: 100%;
 }
+
+#eapps-visitor-counter-bb12f81b-36da-4c63-b1bf-60419457c001 {
+  text-align: center;
+}
+
+.dtTkzE > a{
+  display: none !important;
+}
+.eapps-widget-toolbar-panel-wrapper {
+  display: none;
+}
