--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -20,7 +20,7 @@
       class="lg:flex-grow md:w-1/2 lg:pl-24 rounded-md flex flex-col md:items-start md:text-left items-center pb-10 px-5"
     >
       <div
-        class="w-full text-left sm:text-8xl text-5xl font-black mb-9 sm:md-16 text-white landing-titile"
+        class="w-full text-left sm:text-8xl text-5xl mb-9 sm:md-16 text-white landing-titile"
       >
         <p class="">India's</p>
         <p class="">Fastest Book</p>
